Working version
---------------

### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

### Build system:

### Bug fixes:

OCaml 5.0
---------

### Language features:

### Runtime system:
- #10964: Ring-buffer based runtime tracing (runtime_events)
  Runtime_events is a very low overhead runtime tracing system designed for
  continuous monitoring of OCaml applications.
  (Sadiq Jaffer, review by Anil Madhavapeddy, Enguerrand Decorne,
  Richard Warburton, Gabriel Scherer, Sabine Schmaltz, Florian Angeletti,
  Patrick Ferris, Tom Kelly)

- #10831: Multicore OCaml
  (The multicore team, caml-devel and more)

* #10723: do not use `-flat-namespace` linking for macOS.
  (Carlo Cabrera, review by Damien Doligez)

* #10863, #10933: Remove support for old, unprefixed C runtime function names
  such as `alloc`.  The new names prefixed with `caml_` must be used instead,
  such as `caml_alloc`.  Consequently, it is no longer needed to define
  `CAML_NAME_SPACE` to avoid bringing unprefixed names into scope: this is now
  the default behavior.
  (Nicolás Ojeda Bär, review by Xavier Leroy)

- #10902: Do not register empty code fragments in natdynlink.
  (David Allsopp, review by Xavier Leroy and Damien Doligez)

- #10965: `caml_fatal_error_hook`, GC timing hooks, and
  `caml_scan_roots_hook` are now atomic variables. Restore GC timing
  hooks in multicore.
  (Guillaume Munch-Maccagnoni, review by Enguerrand Decorne, Xavier
  Leroy, Gabriel Scherer, and KC Sivaramakrishnan)

- #11209: Add a public and thread-safe timing hook running at domain
  termination, after this domain has stopped running any OCaml code:
  `caml_domain_terminated_hook`. This can be useful for implementing
  domain-local state in C.
  (Guillaume Munch-Maccagnoni, review by Xavier Leroy and Gabriel
  Scherer)
